BuildHughes/translation-tool/inputs/source_meta/objects/HSvc_SDTHIST__c.object
<CustomObject>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>SDT HIST</relationshipLabel>
        <relationshipName>SDT_HIST</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Activity</label>
        <referenceTo>Hsvc_CaseActivity__c</referenceTo>
        <relationshipLabel>SDT HIST</relationshipLabel>
        <relationshipName>SDT_HIST</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <label>Case Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>SDT HIST</relationshipLabel>
        <relationshipName>SDT_HIST</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>Information on failures</description>
        <label>Message</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signal_Quality__c</fullName>
        <description>Provides SQF reading</description>
        <label>Signal Quality</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Success__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the calls were successful</description>
        <label>Success</label>
        <type>Checkbox</type>
    </fields>
    <label>SDT HIST</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SDTHIST-{0000}</displayFormat>
        <label>SDT HIST ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SDT HIST</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>